# q_kinetic

./: CMakeLists.txt  adiabatic_invariant_at_4.py  init_distribution.py  init_distribution_J1.py  island_width.py  kinetic_q_with_minimum.nb  postprocess.py  pyproject.toml  roots.py  simple_cpp_example.py  simple_example.py  simple_example_functional_system.py
figures/: .~lock.q_kinetic_vs_transport_barrier_toy.pptx#  q_kinetic_vs_transport_barrier_toy.pptx
src/q_kinetic_minimum/cpp_implementation/: bindings.cpp
